# Outlook-PST-Splitter-and-Repair-Tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pstsplitter.spec  pstsplitter_onefile.spec  pyproject.toml  requirements.txt  version_info.py
.github/: copilot-instructions.md
docs/: _config.yml  index.html  robots.txt  sitemap.xml
src/: launch_pstsplitter.py
src/pstsplitter/: __init__.py  __main__.py  cli.py  gui.py  log_exporter.py  outlook.py  performance_optimizer.py  space_crisis_manager.py  splitter.py  ultimate_pst_handler.py  util.py
tests/: conftest.py  test_filters_and_folder_mode.py  test_grouping.py
