[project]
name = "pstsplitter"
version = "0.1.0"
description = "GUI tool to split large Outlook PST files into smaller PST chunks by size"
authors = [ { name = "Your Name", email = "you@example.com" } ]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Email"
]
dependencies = [
    "pywin32>=306",
    "tqdm>=4.66.0"
]

[project.scripts]
pstsplitter = "pstsplitter.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "mypy>=1.10.0", "ruff>=0.5.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
